[tool.poetry]
name = "luga"
version = "0.1.0"
description = "Sensing the language of the text using Machine Learning"
authors = ["Prayson W. Daniel <praysonwilfred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.20.0"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "flake8"
flake8 = "^4.0.1"
pyupgrade = "^2.29.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
