[tool.poetry]
name = "luga"
version = "0.2.1"
description = "Sensing the language of the text using Machine Learning"
authors = ["Prayson W. Daniel <praysonwilfred@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Proteusiq/luga"
homepage = "https://github.com/Proteusiq/luga"

[tool.poetry-version-plugin]
source = "init"

[tool.poetry.dependencies]
python = "^3.7.1"
httpx = "^0.20.0"
fasttext = "^0.9.2"
numpy = "^1.21"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "flake8"
flake8 = "^4.0.1"
pyupgrade = "^2.29.0"
mypy = "^0.910"
pre-commit = "^2.15.0"
pylint = "^2.11.1"
poetry-version-plugin = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
